# sherd

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  build-final.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
branding/: BRAND.md
docs/: protocol.md
src/: armor.rs  cli.rs  envelope.rs  main.rs  memory.rs  selftest.rs  shamir.rs  wordlist.rs
src/crypto/: aead.rs  commit.rs  constants.rs  kdf.rs  keygen.rs  mod.rs  recipient.rs  rng.rs
tests/: mlock_bypass.rs
