[package]
name = "sherd"
version = "1.0.0"
edition = "2021"
rust-version = "1.74"
authors = ["Sherd Project"]
license = "MIT OR Apache-2.0"
description = "Offline, single-binary encryption with plausible deniability, Shamir secret sharing, and X25519 recipient mode"
repository = "https://github.com/xbxbxb462-cpu/sherd"
keywords = ["crypto", "encryption", "aes-gcm", "argon2", "shamir"]
categories = ["cryptography", "command-line-utilities"]
publish = false

[package.metadata]
auditable = false

[[bin]]
name = "sherd"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = "symbols"
debug = false
debug-assertions = false
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true

[dependencies]
aes-gcm = { version = "0.10", features = ["zeroize"] }
argon2 = { version = "0.5", features = ["zeroize"] }
anyhow = "1"
base64ct = { version = "1", features = ["alloc"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
hkdf = "0.12"
hmac = "0.12"
libc = "0.2"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
subtle = "2"
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
zeroize = { version = "1", features = ["alloc", "zeroize_derive"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
